updates to styling, removed weird border around editor, overflow is pretty much fixed

--- a/css/quill-snow.css
+++ b/css/quill-snow.css
@@ -846,7 +846,6 @@
   background-color: #000;
 }
 .ql-toolbar.ql-snow {
-  border: 1px solid #ccc;
   box-sizing: border-box;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', montserrat;
   padding: 8px;
@@ -941,5 +940,5 @@
   color: #06c;
 }
 .ql-container.ql-snow {
-  border: 1px solid #3a3a3a;
+
 }
