--- a/css/splitter.css
+++ b/css/splitter.css
@@ -14,20 +14,20 @@ body, html {
     flex-direction: row;
     overflow: hidden;
     width: 100%;
-    height: 100%;
+    height: 99%;
     position: absolute;
     margin-top: 35px;
 }
 .panel-left {
     flex: 0 0 auto;  /* only manually resize */
     width: 100%;
-    height: 95%;
+		height: 97%;
     min-width: 0px;
     max-width: 100%;
     white-space: nowrap;
     background:#A5A5A5;
     color: white;
-	overflow-y: hidden;
+		overflow: hidden;
 }
 .splitter {
     flex: 0 0 auto;
@@ -35,14 +35,16 @@ body, html {
     background: url(./vsizegrip.png) center center no-repeat #535353;
     /* min-height: 200px; */
     cursor: col-resize;
+		top: 0px;
 }
 .panel-right {
     flex: 1 1 auto; /* resizable */
     /* min-height: 200px; */
     min-width: 0px;
     background: #eee;
-    overflow-y: scroll;
-    height: 95%;
+    overflow: scroll;
+		height: 97%;
+
 }
 
 .container {
