--- a/css/theorem.css
+++ b/css/theorem.css
@@ -44,7 +44,7 @@
 }
 
 table{
-	border: 0.1px solid black;
+	/* border: 0.1px solid black; */
 	width: 100%;
 	position:relative;
 	text-align: center;
