--- a/css/topbar.css
+++ b/css/topbar.css
@@ -57,11 +57,3 @@ button {
 	background: #1e1e1e;
 	cursor: pointer;
 }
-
-/* Add a black background color to the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
-	cursor:pointer;
-	padding: 18px;
-}
